--- a/.github/workflows/detekt.yml
+++ b/.github/workflows/detekt.yml
@@ -71,6 +71,7 @@ jobs:
         ' 1> gh_response.json
         
         DETEKT_RELEASE_SHA=$(jq --raw-output '.data.repository.release.releaseAssets.tagCommit.oid' gh_response.json)
+        echo $DETEKT_RELEASE_SHA
         if [ $DETEKT_RELEASE_SHA != "8028a0673a9f18fdd91c7eebfae4642941135168" ]; then
           echo "Release tag doesn't match expected commit SHA"
           exit 1
@@ -96,7 +97,7 @@ jobs:
       continue-on-error: true
       run: |
         detekt --input ${{ github.workspace }} --report sarif:${{ github.workspace }}/detekt.sarif.json
-
+    
     # Modifies the SARIF output produced by Detekt so that absolute URIs are relative
     # This is so we can easily map results onto their source files
     # This can be removed once relative URI support lands in Detekt: https://git.io/JLBbA
